# bdspro-stable

./: CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  demo.sql  etcd-workers.yaml  flake.nix  test_persist_recover  topology.yaml
nes-common/: CMakeLists.txt
nes-common/benchmarks/: CMakeLists.txt  ExceptionBenchmark.cpp
nes-common/include/: ErrorHandling.hpp  ExceptionDefinitions.inc  PrecompiledHeaders.hpp  Thread.hpp
nes-common/include/Identifiers/: Identifiers.hpp  NESStrongType.hpp  NESStrongTypeFormat.hpp  NESStrongTypeJson.hpp  NESStrongTypeYaml.hpp
nes-common/include/Iterators/: BFSIterator.hpp
nes-common/include/Sequencing/: ChunkCollector.hpp  NonBlockingMonotonicSeqQueue.hpp  SequenceData.hpp
nes-common/include/Time/: Timestamp.hpp
nes-common/include/Util/: AtomicState.hpp  Common.hpp  DisableWarningsPragma.hpp  DumpHelper.hpp  ExecutionMode.hpp  Files.hpp  Locks.hpp  Overloaded.hpp  PlanRenderer.hpp  Pointers.hpp  QueryConsoleDumpHandler.hpp  Ranges.hpp  Registry.hpp  (+11 more)
nes-common/src/: CMakeLists.txt  ErrorHandling.cpp  Thread.cpp
nes-common/tests/: CMakeLists.txt
nes-data-types/: CMakeLists.txt
nes-data-types/src/: CMakeLists.txt
nes-data-types/tests/: CMakeLists.txt
nes-executable/: CMakeLists.txt
nes-executable/include/: BackpressureChannel.hpp  CompiledQueryPlan.hpp  ExecutablePipelineStage.hpp  Pipeline.hpp  PipelineExecutionContext.hpp
nes-executable/src/: BackpressureChannel.cpp  CMakeLists.txt  CompiledQueryPlan.cpp  Pipeline.cpp
nes-executable/tests/: BackpressureChannelTest.cpp  CMakeLists.txt
nes-input-formatters/: CMakeLists.txt  README.md
nes-input-formatters/private/: CSVInputFormatIndexer.hpp  Concepts.hpp  FieldIndexFunction.hpp  FieldOffsets.hpp  InputFormatIndexer.hpp  InputFormatter.hpp  JSONInputFormatIndexer.hpp  RawTupleBuffer.hpp  RawValueParser.hpp  SequenceShredder.hpp  SpanningTupleBuffer.hpp  SpanningTupleBufferState.hpp
nes-input-formatters/src/: CMakeLists.txt  CSVInputFormatIndexer.cpp  InputFormatterTupleBufferRef.cpp  InputFormatterTupleBufferRefProvider.cpp  JSONInputFormatIndexer.cpp  RawValueParser.cpp  SequenceShredder.cpp  SpanningTupleBuffer.cpp  SpanningTupleBufferState.cpp
nes-input-formatters/tests/: CMakeLists.txt
nes-logical-operators/: CMakeLists.txt
nes-logical-operators/src/: CMakeLists.txt
nes-logical-operators/tests/: CMakeLists.txt  LogicalPlanTest.cpp
nes-memory/: BufferManager.cpp  CMakeLists.txt  NesDefaultMemoryAllocator.cpp  TaggedPointer.cpp  TaggedPointer.hpp  TestTupleBuffer.cpp  TupleBuffer.cpp  TupleBufferImpl.cpp  TupleBufferImpl.hpp  UnpooledChunksManager.cpp
nes-memory/MemoryLayout/: CMakeLists.txt  ColumnLayout.cpp  MemoryLayout.cpp  MemoryLayoutTupleBuffer.cpp  RowLayout.cpp  VariableSizedAccess.cpp
nes-memory/tests/: CMakeLists.txt  TupleBufferMemoryAccessTest.cpp  UnpooledBufferTests.cpp
nes-nautilus/: CMakeLists.txt
nes-nautilus/include/: Arena.hpp
nes-nautilus/src/: CMakeLists.txt
nes-nautilus/tests/: CMakeLists.txt
nes-nebuli/: CMakeLists.txt
nes-nebuli/apps/: CMakeLists.txt
nes-nebuli/include/: DistributedQuery.hpp  LegacyOptimizer.hpp  NetworkTopology.hpp  WorkerCatalog.hpp  WorkerConfig.hpp
nes-nebuli/src/: CMakeLists.txt  DistributedQuery.cpp  NetworkTopology.cpp  WorkerCatalog.cpp
nes-nebuli/tests/: CMakeLists.txt  DistributedPlanningTest.cpp  DistributedQueryTest.cpp  NetworkTopologyTest.cpp
nes-query-compiler/: CMakeLists.txt
nes-query-compiler/include/: PipelinedQueryPlan.hpp  QueryCompiler.hpp
nes-query-compiler/src/: CMakeLists.txt  PipelinedQueryPlan.cpp  QueryCompiler.cpp
nes-query-engine/: CMakeLists.txt  DelayedTaskSubmitter.hpp  EngineLogger.hpp  Interfaces.hpp  QueryEngine.cpp  QueryEngineConfiguration.cpp  RunningQueryPlan.cpp  RunningQueryPlan.hpp  RunningSource.cpp  RunningSource.hpp  Task.cpp  Task.hpp  TaskQueue.hpp
nes-query-engine/include/: QueryEngine.hpp  QueryEngineConfiguration.hpp  QueryEngineStatisticListener.hpp
nes-query-engine/tests/: CMakeLists.txt  DelayedTaskSubmitterTest.cpp  QueryEngineConfigurationTest.cpp  QueryEngineTest.cpp  QueryPlanTest.cpp  TaskQueueTest.cpp
nes-query-optimizer/: CMakeLists.txt
nes-query-optimizer/include/: QueryExecutionConfiguration.hpp  QueryOptimizer.hpp
nes-query-optimizer/private/: PhysicalPlanBuilder.hpp
nes-query-optimizer/src/: CMakeLists.txt  PhysicalPlanBuilder.cpp  QueryOptimizer.cpp
nes-runtime/: CMakeLists.txt
nes-runtime/include/: CompilationContext.hpp  ExecutableQueryPlan.hpp  ExecutionContext.hpp
nes-runtime/src/: CMakeLists.txt  ExecutableQueryPlan.cpp  ExecutionContext.cpp
nes-runtime/tests/: CMakeLists.txt
nes-single-node-worker/: CMakeLists.txt
nes-single-node-worker/include/: CompositeStatisticListener.hpp  GoogleEventTracePrinter.hpp  GrpcService.hpp  SingleNodeWorker.hpp  SingleNodeWorkerConfiguration.hpp
nes-single-node-worker/interface/: WorkerStatus.cpp  WorkerStatus.hpp
nes-single-node-worker/src/: CMakeLists.txt  CompositeStatisticListener.cpp  GoogleEventTracePrinter.cpp  GrpcService.cpp  SingleNodeWorker.cpp  SingleNodeWorkerConfiguration.cpp  SingleNodeWorkerStarter.cpp
nes-sinks/: CMakeLists.txt
nes-sinks/src/: CMakeLists.txt  FileSink.cpp  PrintSink.cpp  Sink.cpp  SinkCatalog.cpp  SinkDescriptor.cpp  SinkProvider.cpp
nes-sources/: CMakeLists.txt
nes-sources/private/: FileSource.hpp  SourceThread.hpp
nes-sources/src/: CMakeLists.txt  ClassHierarchy.md  FileSource.cpp  LogicalSource.cpp  Source.cpp  SourceCatalog.cpp  SourceDataProvider.cpp  SourceDescriptor.cpp  SourceHandle.cpp  SourceProvider.cpp  SourceThread.cpp  SourceValidationProvider.cpp
nes-sources/tests/: CMakeLists.txt  SourceCatalogTest.cpp  SourceThreadTest.cpp
nes-sql-parser/: AntlrSQL.g4  CMakeLists.txt
nes-sql-parser/private/: CommonParserFunctions.hpp  ParserUtil.hpp
nes-sql-parser/src/: AntlrSQLHelper.cpp  AntlrSQLQueryParser.cpp  AntlrSQLQueryPlanCreator.cpp  CMakeLists.txt  CommonParserFunctions.cpp  StatementBinder.cpp
nes-sql-parser/tests/: CMakeLists.txt  StatementBinderTest.cpp
nes-systests/systest/: CMakeLists.txt
(+1083 files in other folders)
